fix: moved script test to generic test case run in specific engine, removed remaninig specialization in core module